--- a/oas-env/oas/templates/header.html
+++ b/oas-env/oas/templates/header.html
@@ -84,7 +84,7 @@
                               </ul>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Store list</a>
+                              <a class="nav-link" href="{% url 'add_product' %}">Store list</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="{% url 'contact' %}">Contact</a>
