--- a/oas-env/oas/templates/add_product.html
+++ b/oas-env/oas/templates/add_product.html
@@ -59,7 +59,7 @@
     </div>
 
     <!-- Bid Cards Section -->
-    <div class="bid-cards">
+    <div class="user-auction-cards">
         <div class="row">
             {% for product in products %}
                 {% if product.category == 'Electronics' %}
