--- a/oas-env/oas/static/CSS/add_product.css
+++ b/oas-env/oas/static/CSS/add_product.css
@@ -1,4 +1,4 @@
-.add-product .container {
+.container {
     background-color: #fff;
     padding: 30px;
     border-radius: 8px;
@@ -14,14 +14,13 @@
     margin-bottom: 40px;
 }
 
-.add-product h1 {
+h1 {
     text-align: center;
     font-size: 28px;
     color: #333;
     margin-bottom: 20px;
 }
-
-.add-product label {
+label {
     display: block;
     font-weight: bold;
     color: #555;
@@ -31,7 +30,7 @@
 
 
 
-.add-product input[type="submit"] {
+input[type="submit"] {
     width: 100%;
     padding: 14px;
     background-color: #28a745;
@@ -42,11 +41,11 @@
     cursor: pointer;
 }
 
-.add-product input[type="submit"]:hover {
+ input[type="submit"]:hover {
     background-color: #218838;
 }
 
-.add-product .note {
+.note {
     font-size: 12px;
     color: #888;
 }
