--- a/oas-env/oas/static/CSS/add_product.css
+++ b/oas-env/oas/static/CSS/add_product.css
@@ -80,3 +80,125 @@ input[type="submit"]:hover {
     color: #888;
     margin-top: -10px;
 }
+
+
+
+
+
+
+
+
+
+
+
+.bid-cards .card{
+    position: relative;
+    transition: all 0.3s;
+    margin-top: 30px;
+    background-color: black;
+    color: white;
+    background-color: linear-gradient(to right , blue , green);
+    
+  
+  }
+  .bid-cards .card:hover{
+    transform: scale(1.15);
+    border-bottom: 3px solid;
+    border-color: white;
+    
+  }
+  
+  
+  
+  .bid-cards .timer-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1; /* Ensure the overlay is behind the link */
+    pointer-events: none; /* Prevent the overlay from blocking interactions */
+  }
+  
+  .bid-cards .card-body {
+    position: relative;
+    z-index: 2; /* Ensure the link is above the overlay */
+  }
+  
+  .bid-cards .btn-success {
+    position: relative;
+    z-index: 3; /* Ensure the button is above all other elements */
+  }
+  
+  
+  
+  
+  
+  
+  
+  @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
+  
+  .user-auction-cards .card {
+    position: relative;
+    overflow: hidden;
+    transition: all 0.3s;
+    margin-top: 30px;
+    background-color: black;
+    color: white;
+  }
+  
+  .user-auction-cards.card:hover {
+    transform: scale(1.15);
+    border-bottom: 3px solid;
+    border-color: white;
+  }
+  
+  .timer-overlay {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 1; 
+    transition: opacity 0.3s;
+  }
+  
+  .user-auction-cards .card:hover .timer-overlay {
+    opacity: 1;
+  }
+  
+  .timer-overlay .count {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
+  
+  .timer-overlay .co {
+    display: inline-block;
+    width: 80px;
+    border: 2px solid white;
+    margin: 0 10px;
+    font-size: 0.8rem;
+    padding: 5px 10px;
+    box-shadow: inset 0 4px 12px rgba(0, 0, 0, 0.9), inset 0 8px 16px rgba(0, 0, 0, 0.8);
+  }
+  
+  .timer-overlay .co span {
+    font-size: 1.5rem;
+    margin-top: 3px;
+  }
+  .count {
+    font-size: 1.5rem;
+    color: white;
+    background: #262727;
+    padding: 10px;
+  }
+  .btn-success {
+    z-index: 2;
+  }
+  
+  
