--- a/oas-env/oas/templates/header.html
+++ b/oas-env/oas/templates/header.html
@@ -75,13 +75,7 @@
                               <a class="nav-link" href="{% url 'browse_page' %}">Browse products</a>
                             </li>
                             <li class="nav-item dropdown">
-                              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
-                              <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Blog Grid</a></li>
-                                <li><a class="dropdown-item" href="#">Blog standard</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Blog Details</a></li>
-                              </ul>
+                              <a class="nav-link dropdown-toggle" href="{% url 'shop' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="{% url 'add_product' %}">Store list</a>
