--- a/oas-env/oas/templates/header.html
+++ b/oas-env/oas/templates/header.html
@@ -75,7 +75,7 @@
                               <a class="nav-link" href="{% url 'browse_page' %}">Browse products</a>
                             </li>
                             <li class="nav-item dropdown">
-                              <a class="nav-link dropdown-toggle" href="{% url 'shop' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                              <a class="nav-link dropdown-toggle" href="{% url 'shop' %}">Shop</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="{% url 'add_product' %}">Store list</a>
