--- a/oas-env/oas/templates/header.html
+++ b/oas-env/oas/templates/header.html
@@ -78,7 +78,7 @@
                               <a class="nav-link dropdown-toggle" href="{% url 'shop' %}">Shop</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="{% url 'add_product' %}">Store list</a>
+                              <a class="nav-link" href="{% url 'add_product' %}">List Product</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="{% url 'contact' %}">Contact</a>
