--- a/oas-env/oas/templates/shop.html
+++ b/oas-env/oas/templates/shop.html
@@ -10,6 +10,25 @@
 </head>
 <body>
 
+
+
+    <div class="shop-content d-flex">
+        <div class="container">
+          <div class="shop-content-inner">
+            <h1><b>Live Auction</b></h1>
+            <p style="color: grey">
+              Explore on the world's best & largest Bidding marketplace with our
+              beautiful Bidding<br />
+              products. We want to be a part of your smile, success and future
+              growth.
+            </p>
+          </div>
+          <!-- /.shop-content-inner -->
+        </div>
+      </div>
+      <!-- /.shop-content -->
+
+
     <div class="user-auction-cards">
         <div class="container">
             <div class="row">
