--- a/oas-env/oas/templates/add_product.html
+++ b/oas-env/oas/templates/add_product.html
@@ -35,6 +35,12 @@
                         <option value="Other">Other</option>
                     </select>
                 </div>
+
+
+                <div class="input-group"></div>
+                    <label for="description">Description</label>
+                    <textarea id="long-description" name="long-description" placeholder="Enter Comprehensive product details" required></textarea>
+                </div>
     
                 <div class="input-group">
                     <label for="bid_end_time">Bid End Time</label>
