--- a/oas-env/oas/templates/add_product.html
+++ b/oas-env/oas/templates/add_product.html
@@ -38,7 +38,7 @@
 
 
                 <div class="input-group"></div>
-                    <label for="description">Description</label>
+                    <label for="description">Long Description</label>
                     <textarea id="long-description" name="long-description" placeholder="Enter Comprehensive product details" required></textarea>
                 </div>
     
