--- a/oas-env/oas/templates/add_product.html
+++ b/oas-env/oas/templates/add_product.html
@@ -21,8 +21,8 @@
                 </div>
     
                 <div class="input-group">
-                    <label for="description">Current Bid</label>
-                    <input type="number" id="description" name="description" placeholder="Enter current bid" class="small-input" required>
+                    <label for="current_bid">Current Bid</label>
+                    <input type="number" id="current_bid" name="description" placeholder="Enter current bid" required />
                 </div>
     
                 <div class="input-group">
