--- a/oas-env/oas/templates/add_product.html
+++ b/oas-env/oas/templates/add_product.html
@@ -37,7 +37,7 @@
                 </div>
 
 
-                <div class="input-group"></div>
+                <div class="input-group">
                     <label for="description">Long Description</label>
                     <textarea id="long-description" name="long-description" placeholder="Enter Comprehensive product details" required></textarea>
                 </div>
