--- a/oas-env/oas/static/CSS/prodetail.css
+++ b/oas-env/oas/static/CSS/prodetail.css
@@ -8,6 +8,7 @@
     justify-content: flex-start;
     align-items: center;
     padding: 20px;
+    background-image: url('/media/images/animated_bg1.jpg')
 }
 
 .inner-banner-content {
