--- a/oas-env/oas/static/CSS/prodetail.css
+++ b/oas-env/oas/static/CSS/prodetail.css
@@ -8,7 +8,10 @@
     justify-content: flex-start;
     align-items: center;
     padding: 20px;
-    background-image: url(animated_bg1.jpg);
+    background-image: url('animated_bg1.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .inner-banner-content {
