--- a/oas-env/oas/static/CSS/prodetail.css
+++ b/oas-env/oas/static/CSS/prodetail.css
@@ -24,6 +24,7 @@
 }
 
 .inner-banner-content h2 {
+    text-align: center;
     font-size: 4vw; /* Make the font size responsive */
     color: white;
     margin: 0;
