--- a/oas-env/oas/static/CSS/prodetail.css
+++ b/oas-env/oas/static/CSS/prodetail.css
@@ -30,14 +30,14 @@
     margin: 0;
 }
 
-.inner-banner-img {
+/*.inner-banner-img {
     position: absolute;
     bottom: -200px;
     right: -65px;
     text-align: right;
     max-width: 100%;
     height: auto;
-}
+}*/
 
 @media (max-width: 768px) {
     .inner-banner {
