--- a/oas-env/oas/static/CSS/prodetail.css
+++ b/oas-env/oas/static/CSS/prodetail.css
@@ -8,7 +8,7 @@
     justify-content: flex-start;
     align-items: center;
     padding: 20px;
-    background-image: url('media/animated_bg1.jpg');
+    background-image: url('static/img/animated_bg1.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
