--- a/oas-env/oas/static/CSS/prodetail.css
+++ b/oas-env/oas/static/CSS/prodetail.css
@@ -27,7 +27,7 @@
     background-color: rgba(29, 26, 26, 0.408);
     border-radius: 22px;
     font-size: 4vw; 
-    color: white;
+    color: #f1c94d;
     margin: 0;
 }
 
