--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -372,6 +372,12 @@
 
   <p href="{% url 'add_review' %}">if you want to add review click here</p>
 
+  <form method="post" enctype="multipart/form-data"></form>
+    {% csrf_token %}
+    {{ form.as_p }} <!-- This renders the form fields as per your ReviewForm in forms.py -->
+    <button type="submit" class="btn btn-primary">Submit Review</button>
+</form>
+
 
 
 
