--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -370,7 +370,7 @@
   </div>
   </div>
 
-  <p href="{% url 'add_review' %}">if you want to add review click here</p>
+  <p href="{% url 'add_review' %}" >Login</p>
 
   <form method="post" enctype="multipart/form-data"></form>
     {% csrf_token %}
