--- a/oas-env/oas/static/CSS/add_review.css
+++ b/oas-env/oas/static/CSS/add_review.css
@@ -87,3 +87,61 @@
         font-size: 1em;
     }
 }
+
+
+
+
+
+
+
+body{
+font-family: Arial, sans-serif;
+background-color: #f0f0f0;
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
+}
+.review-form-container {
+background-color: #fff;
+padding: 20px;
+border-radius: 8px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+width: 100%;
+max-width: 600px;
+}
+.review-form-heading {
+font-size: 24px;
+margin-bottom: 20px;
+text-align: center;
+}
+.form-group {
+margin-bottom: 15px;
+}
+label {
+font-size: 14px;
+display: block;
+margin-bottom: 5px;
+}
+input[type="text"], textarea, input[type="file"] {
+width: 100%;
+padding: 10px;
+font-size: 16px;
+border-radius: 5px;
+border: 1px solid #ccc;
+box-sizing: border-box;
+}
+.submit-btn {
+display: block;
+width: 100%;
+padding: 10px;
+background-color: #007bff;
+color: white;
+border: none;
+border-radius: 5px;
+font-size: 16px;
+cursor: pointer;
+}
+.submit-btn:hover {
+background-color: #0056b3;
+}
