--- a/oas-env/oas/static/CSS/add_product.css
+++ b/oas-env/oas/static/CSS/add_product.css
@@ -223,3 +223,32 @@ input[type="submit"]:hover {
     color: white;
     padding: 20px;
   }
+
+
+
+
+
+
+
+  .messages {
+    list-style: none;
+    padding: 0;
+    margin: 1em 0;
+}
+
+.messages li {
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.messages .success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.messages .error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
