--- a/oas-env/oas/templates/browse_product.html
+++ b/oas-env/oas/templates/browse_product.html
@@ -161,11 +161,11 @@
                     
                     
 
-                    <!-- Add more products as needed -->
+                    <-- Add more products as needed -->
                 </ul>
-            </div> -->
+            </div> 
 
-                     Add more products as needed -->
+                    
                 </ul>
                 <!--</ul>
             </div>
@@ -175,7 +175,7 @@
         </div>
       </div>
   
-   -->
+   
 
   
   
