--- a/oas-env/oas/templates/checkout.html
+++ b/oas-env/oas/templates/checkout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout for {{ product.title }}</title>
     <style>
-        body {
+        /*body {
             font-family: Arial, sans-serif;
             text-align: center;
             background-color: #f7f7f7;
@@ -36,17 +36,19 @@
         .checkout-button:hover {
             background-color: #218838;
         }
+            */
     </style>
 </head>
 <body>
 
-    <div class="checkout-container">
+    
+  <!--<div class="checkout-container">
         <h1>Congratulations, {{ highest_bid.email }}!</h1>
         <p>You have won the auction for <strong>"{{ product.title }}"</strong> with a bid of ${{ highest_bid.price }}.</p>
         <p>To complete your purchase, please click the button below to proceed to payment:</p>
         
         <a href="{{ checkout_url }}" class="checkout-button">Proceed to Payment</a>
-    </div>
+    </div>--> 
 
 </body>
 </html>
