--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -353,7 +353,7 @@
 
 
 
-<div class="reviews-section">
+<!-- /.<div class="reviews-section">
   <h2><b>What Clients Say</b></h2>
   <p style="color: rgb(171, 161, 161);">
       Explore the world's best & largest Bidding marketplace with our beautiful Bidding products.
@@ -364,16 +364,16 @@
       {% for product in products %}
           {% if product.category == 'client-review' %}
               <!-- Display client reviews -->
-              <div class="review-card card">
+              <!--<div class="review-card card">
                   <!-- Product image -->
-                  {% if product.image %}
+                  <!--{% if product.image %}
                       <img src="{{ product.image.url }}" alt="{{ product.title }}" class="profile-image">
                   {% else %}
                       <img src="/path/to/default/image.jpg" alt="Default Profile Image" class="profile-image">
                   {% endif %}
                   
                   <!-- Review content -->
-                  <p>{{ product.description }}</p>
+                  <!--<p>{{ product.description }}</p>
                   <h3>{{ product.title }}</h3>
               </div>
           {% endif %}
@@ -381,8 +381,8 @@
   </div>
 
   <!-- Link to add a new review -->
-  <a href="{% url 'add_review' %}" class="add-review-link">Click here to add a review</a>
-</div>
+  <!--<a href="{% url 'add_review' %}" class="add-review-link">Click here to add a review</a>-->
+</div>-->
 
 
 
